test_suite/alan-2022-examples/failing/009030_mutation.alan
source K function Fu0(boolean put "<" R41La) begin relax end begin relax end
